--- a/client/www/index.html
+++ b/client/www/index.html
@@ -16,12 +16,14 @@
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
+  <!-- controllers -->
+  <script src="app/dashboard/dashboard.js"></script>
   <!-- your app's js -->
-  <script src="js/app.js"></script>
+  <script src="app/app.js"></script>
 </head>
 
 <body ng-app="starter">
-  <ion-nav-view></ion-nav-view>
+  <ion-nav-view> app page </ion-nav-view>
 </body>
 
 </html>
