(fix) reorganized code to follow best practices. setup more structue for team to add code

--- a/client/www/app/dashboard/dashboard.html
+++ b/client/www/app/dashboard/dashboard.html
@@ -1,3 +1,5 @@
+<!-- Displays the alerts the user has made for each medication -->
+
 <ion-view view-title="Medications">
   <div class="content has-header">
     <div class="list">
