--- a/client/www/index.html
+++ b/client/www/index.html
@@ -13,6 +13,7 @@
     -->
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/release/js/ionic.bundle.min.js"></script>
+  <script src="lib/ionic-material/dist/ionic.material.min.css"></script>
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
   <!-- cordova script -->
   <script src="cordova.js"></script>
