(feat) Changes to the modal view in Dashboard

--- a/client/www/app/dashboard/more-information.html
+++ b/client/www/app/dashboard/more-information.html
@@ -5,5 +5,8 @@
     </div>
     <h3 class="active slide-up">{{medication.name}} {{medication.dosage}}</h3>
     <h3 class="active slide-up">{{medication.reminder}}</h3>
+    <div class="item">
+      <h3 class="active slide-up"> Instructions</h3>
+    </div>
   </div>
 </ion-modal-view>
