--- a/client/www/app/dashboard/more-information.html
+++ b/client/www/app/dashboard/more-information.html
@@ -3,8 +3,8 @@
     <div class="item item-button-right">
       <button class="button button-balanced">Edit</button>
     </div>
-    <h3 class="active slide-up">{{medication.name}} {{medication.dosage}}</h3>
-    <h3 class="active slide-up">{{medication.reminder}}</h3>
+    <h3 class="active slide-up"> {{medication.name}} {{medication.dosage}} </h3>
+    <h3 class="active slide-up ion-android-alarm-clock"> {{medication.reminder}} </h3>
     <div class="item">
       <h3 class="active slide-up"> Instructions</h3>
     </div>
