--- a/client/www/index.html
+++ b/client/www/index.html
@@ -6,15 +6,13 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <title></title>
   <link href="lib/ionic/release/css/ionic.min.css" rel="stylesheet">
-  <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/release/js/ionic.bundle.min.js"></script>
+  <!-- material design -->
   <script src="lib/ionic-material/dist/ionic.material.min.css"></script>
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
+  <!-- my css -->
+  <link href="css/style.css" rel="stylesheet">
   <!-- cordova script -->
   <script src="cordova.js"></script>
   <!-- app-->
