(fix) refactored dashboard view to edit and delete when user swipes item

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <title></title>
-  <link href="lib/ionic/release/css/ionic.min.css" rel="stylesheet">
+  <link href="lib/ionic/release/css/ionic.css" rel="stylesheet">
   <!-- ionic/angularjs js -->
-  <script src="lib/ionic/release/js/ionic.bundle.min.js"></script>
+  <script src="lib/ionic/release/js/ionic.bundle.js"></script>
   <!-- material design -->
-  <script src="lib/ionic-material/dist/ionic.material.min.css"></script>
+  <script src="lib/ionic-material/dist/ionic.material.css"></script>
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
   <!-- my css -->
   <link href="css/style.css" rel="stylesheet">
@@ -21,6 +21,7 @@
   <script src="app/dashboard/dashboard.js"></script>
   <script src="app/login/login.js"></script>
   <script src="app/medsForm/medsForm.js"></script>
+  <script src="app/register/register.js"></script>
   <!-- services -->
   <script src="app/services.js"></script>
 </head>
