(fix) code clean up and refactor to follow best practices. started medservice.

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -9,7 +9,7 @@
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/release/js/ionic.bundle.js"></script>
   <!-- material design -->
-  <script src="lib/ionic-material/dist/ionic.material.css"></script>
+  <script src="lib/ionic-material/dist/ionic.material.min.css"></script>
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
   <!-- my css -->
   <link href="css/style.css" rel="stylesheet">
@@ -19,9 +19,9 @@
   <script src="app/app.js"></script>
   <!-- controllers -->
   <script src="app/dashboard/dashboard.js"></script>
-  <script src="app/login/login.js"></script>
+  <script src="app/auth/login.js"></script>
   <script src="app/medsForm/medsForm.js"></script>
-  <script src="app/register/register.js"></script>
+  <script src="app/auth/register.js"></script>
   <!-- services -->
   <script src="app/services.js"></script>
 </head>
