--- a/client/www/app/Auth/auth.html
+++ b/client/www/app/Auth/auth.html
@@ -10,6 +10,6 @@
         <input type="password" placeholder="Password" ng-model="data.password">
       </label>
     </div>
-    <button class="button button-block button-calm" ng-click="auth()">Submit</button>
+    <button class="button button-block button-calm" ng-click="submit()">Submit</button>
   </ion-content>
 </ion-view>
