(feat) finalizing signup

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -19,9 +19,8 @@
   <script src="app/app.js"></script>
   <!-- controllers -->
   <script src="app/dashboard/dashboard.js"></script>
-  <script src="app/auth/login.js"></script>
   <script src="app/medsForm/medsForm.js"></script>
-  <script src="app/auth/register.js"></script>
+  <script src="app/auth/auth.js"></script>
   <!-- services -->
   <script src="app/services.js"></script>
 </head>
