(fix) api handles cors, update client differences

--- a/client/www/app/Auth/signin.html
+++ b/client/www/app/Auth/signin.html
@@ -3,7 +3,7 @@
     <div class="list list-inset">
       <label class="item item-input">
         <!-- TODO: UPDATE - data is a placeholder -->
-        <input type="text" placeholder="Username" ng-model="data.username">
+        <input type="text" placeholder="Username" ng-model="data.email">
       </label>
       <label class="item item-input">
         <!-- TODO: UPDATE - data is a placeholder -->
