(fix) change Medications controller to load test data

--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -5,7 +5,7 @@
     <ion-list>
       <ion-input floating-label>
         <ion-label>Name</ion-label>
-        <input type="text" value="">
+        <input type="text" placeholder="{{med.name}}">
       </ion-input>
       <ion-input floating-label>
         <ion-label>Dosage</ion-label>
