(feat) add route to medsForm when 'add' icon clicked

--- a/client/www/app/dashboard/dashboard.html
+++ b/client/www/app/dashboard/dashboard.html
@@ -12,7 +12,7 @@
   </div>
   <div class="tabs tabs-positive">
     <a class="tab-item active"> <i class="icon ion-home"></i> </a>
-    <a class="tab-item"> <i class="icon ion-android-add"></i> </a>
+    <a class="tab-item" ui-sref="medsForm"> <i class="icon ion-android-add"></i> </a>
     <a class="tab-item"> <i class="icon ion-gear-a"></i> </a>
   </div>
 </ion-view>
