--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -5,20 +5,20 @@
     <ion-list>
       <ion-input floating-label>
         <ion-label><h4><b>Name</b></h4></ion-label>
-        <input id="name" name="name" type="text" ng-model=form.name>
+        <input id="name" name="name" type="text" value="{{med.name}}">
       </ion-input>
       <ion-input floating-label>
         <ion-label><h4><b>Dosage</b></h4></ion-label>
-        <input id="dosage" name="dosage" type="text" ng-model=form.dosage>
+        <input id="dosage" name="dosage" type="text" value="{{med.dosage}}">
       </ion-input>
       <ion-input floating-label>
         <ion-label><h4><b>Time Needed</b></h4></ion-label>
 	<!-- <span class="ion-android-alarm-clock"></span> -->
-	<input id="time" name="time" type="text" ng-model=form.timeNeeded>
+	<input id="time" name="time" type="text" value="{{med.reminder}}">
       </ion-input>
       <ion-input floating-label>
         <ion-label><h4><b>Instructions</b></h4></ion-label>
-        <input id="instruct" xoname="instruct" type="text" ng-model=form.instruction>
+        <input id="instruct" xoname="instruct" type="text" value="{{med.instruction}}">
       </ion-input>
     </ion-list>
   </div>
@@ -26,6 +26,6 @@
   <div class="tabs tabs-positive">
     <a class="tab-item active" ui-sref="dashboard"><i class="icon ion-home"></i></a>
     <a class="tab-item"><i class="icon ion-android-archive"></i></a>
-    <a class="tab-item"><i class="icon ion-refresh"></i></a>    
+    <a id="refresh" class="tab-item"><i class="icon ion-refresh"></i></a>    
   </div>
 </ion-view>
