(refactor) remove ngmodels from inputs

--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -25,7 +25,7 @@
   </ion-content>  
   <div class="tabs tabs-positive">
     <a class="tab-item active" ui-sref="dashboard"><i class="icon ion-home"></i></a>
-    <a class="tab-item"><i class="icon ion-android-archive"></i></a>
+    <a class="tab-item" ng-click="saveMed()"><i class="icon ion-android-archive"></i></a>
     <a id="refresh" class="tab-item"><i class="icon ion-refresh"></i></a>    
   </div>
 </ion-view>
