(fix) gulp test file

--- a/client/www/app/auth/signup.html
+++ b/client/www/app/auth/signup.html
@@ -11,5 +11,6 @@
       </label>
     </div>
     <button class="button button-block button-calm" ng-click="signup()">Submit</button>
+    <label> Already have an account? <a href="#/signin">SIGN IN</a></label>
   </ion-content>
 </ion-view>
