--- a/client/www/app/auth/signin.html
+++ b/client/www/app/auth/signin.html
@@ -10,6 +10,7 @@
         <input type="password" placeholder="Password" ng-model="data.password">
       </label>
     </div>
-    <button class="button button-block button-calm" ng-click="signin()">Submit</button>
+    <button class="button button-block button-calm" ng-click="signin()">Open MedUp</button>
+    <label> Don't have an account? <a href="#/signin">SIGN UP</a></label>
   </ion-content>
 </ion-view>
