--- a/client/www/app/auth/signout.html
+++ b/client/www/app/auth/signout.html
@@ -10,6 +10,6 @@
         <input type="password" placeholder="Password" ng-model="data.password">
       </label>
     </div>
-    <button class="button button-block button-calm" ng-click="signup()">Submit</button>
+    <button class="button button-block button-calm" ng-click="signup()">Join Us</button>
   </ion-content>
 </ion-view>
