--- a/client/www/app/auth/signout.html
+++ b/client/www/app/auth/signout.html
@@ -3,11 +3,11 @@
     <div class="list list-inset">
       <label class="item item-input">
         <!-- TODO: UPDATE - data is a placeholder -->
-        <input type="text" placeholder="Username" ng-model="data.email">
+        <input type="text" placeholder="Username" ng-model="user.email">
       </label>
       <label class="item item-input">
         <!-- TODO: UPDATE - data is a placeholder -->
-        <input type="password" placeholder="Password" ng-model="data.password">
+        <input type="password" placeholder="Password" ng-model="user.password">
       </label>
     </div>
     <button class="button button-block button-calm" ng-click="signup()">Join Us</button>
