(fix) handle web client files

--- a/server/public/app/dashboard/dashboard.html
+++ b/server/public/app/dashboard/dashboard.html
@@ -4,7 +4,7 @@
 
     <div class="primary-logo">
       
-      <img src="img/logo.png" alt="MedUp Logo">
+      <img src="assets/img/logo.png" alt="MedUp Logo">
 
     </div>
 
