--- a/server/public/app/view-medications/view-medications.html
+++ b/server/public/app/view-medications/view-medications.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="med-alarm">
-          <img src="img/pill-alarm.png">
+          <img src="assets/img/pill-alarm.png">
         </div>
 
         <div class="med-controls">
