--- a/client/www/app/auth/signup.html
+++ b/client/www/app/auth/signup.html
@@ -10,7 +10,11 @@
         <input type="password" placeholder="Password" ng-model="user.password">
       </label>
     </div>
-    <button class="button button-block button-calm" ng-click="signup()">Submit</button>
-    <label> Already have an account? <a href="#/signin">SIGN IN</a></label>
+    <div class="row">
+      <div class="col-offset-20 col-70">
+        <button class="button button-block button-calm" ng-click="signup()">Submit</button>
+        <div ng-click="goToSignIn()">Already have an account? SIGN IN</div>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
