--- a/client/www/app/dashboard/dashboard.html
+++ b/client/www/app/dashboard/dashboard.html
@@ -7,6 +7,7 @@
         <p class="ion-android-alarm-clock"> {{medication.info.reminder}} </p>
         <ion-option-button class="button-balanced icon ion-edit" ng-click="editMedication(medication)"></ion-option-button>
         <ion-option-button class="button-assertive icon ion-trash-a" ng-click="removeReminder(medication)"></ion-option-button>
+        <ion-button ng-click='testNotification()'> Test</ion-button>
       </ion-item>
     </ion-list>
   </div>
