--- a/client/www/app/dashboard/dashboard.html
+++ b/client/www/app/dashboard/dashboard.html
@@ -3,8 +3,8 @@
   <div class="content has-header">
     <ion-list show-delete="false" can-swipe="true">
       <ion-item ng-repeat="medication in medications">
-        <h2><b> {{medication.name}} {{medication.dosage}} </b></h2>
-        <p class="ion-android-alarm-clock"> {{medication.reminder}} </p>
+        <h2><b> {{medication.info.name}} {{medication.info.dosage}} </b></h2>
+        <p class="ion-android-alarm-clock"> {{medication.info.reminder}} </p>
         <ion-option-button class="button-balanced icon ion-edit" ng-click="editMedication(medication)"></ion-option-button>
         <ion-option-button class="button-assertive icon ion-trash-a" ng-click="removeReminder(medication)"></ion-option-button>
       </ion-item>
