--- a/client/www/app/dashboard/more-information.html
+++ b/client/www/app/dashboard/more-information.html
@@ -3,10 +3,10 @@
     <div class="item item-button-right">
       <button class="button button-balanced">Edit</button>
     </div>
-    <h3 class="active slide-up"> {{medication.name}} {{medication.dosage}} </h3>
-    <h3 class="active slide-up ion-android-alarm-clock"> {{medication.reminder}} </h3>
+    <h3 class="active slide-up"> {{medication.info.name}} {{medication.info.dosage}} </h3>
+    <h3 class="active slide-up ion-android-alarm-clock"> {{medication.info.reminder}} </h3>
     <div class="item">
-      <h2 class="active slide-up"> {{medication.instruction}} </h2>
+      <h2 class="active slide-up"> {{medication.info.instruct}} </h2>
     </div>
   </div>
 </ion-modal-view>
