(feat) main page view complete

--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -1,31 +1,35 @@
 <!-- Display input fields for entering medication information and schedule times. -->
 <ion-view name="medsForm" view-title="Medications Editor and Planner">
   <ion-content class="padding">
-  <div class="list list-inset">
-    <ion-list>
-      <ion-input floating-label>
-        <ion-label><h4><b>Name</b></h4></ion-label>
-        <input id="name" name="name" type="text" ng-model="med.info.name">
-      </ion-input>
-      <ion-input floating-label>
-        <ion-label><h4><b>Dosage</b></h4></ion-label>
-        <input id="dosage" name="dosage" type="text" ng-model="med.info.dosage">
-      </ion-input>
-      <ion-input floating-label>
-        <ion-label><h4><b>Time Needed</b></h4></ion-label>
-	<!-- <span class="ion-android-alarm-clock"></span> -->
-	<input id="time" name="time" type="text" ng-model="med.info.reminder">
-      </ion-input>
-      <ion-input floating-label>
-        <ion-label><h4><b>Instructions</b></h4></ion-label>
-        <input id="instruct" xoname="instruct" type="text" ng-model="med.info.instruct">
-      </ion-input>
-    </ion-list>
-  </div>
-  </ion-content>  
+    <div class="list list-inset">
+      <ion-list>
+        <ion-input floating-label>
+          <ion-label>
+            <h4><b>Name</b></h4></ion-label>
+          <input id="name" name="name" type="text" ng-model="med.info.name">
+        </ion-input>
+        <ion-input floating-label>
+          <ion-label>
+            <h4><b>Dosage</b></h4></ion-label>
+          <input id="dosage" name="dosage" type="text" ng-model="med.info.dosage">
+        </ion-input>
+        <ion-input floating-label>
+          <ion-label>
+            <h4><b>Time Needed</b></h4></ion-label>
+          <!-- <span class="ion-android-alarm-clock"></span> -->
+          <input id="time" name="time" type="text" ng-model="med.info.reminder">
+        </ion-input>
+        <ion-input floating-label>
+          <ion-label>
+            <h4><b>Instructions</b></h4></ion-label>
+          <input id="instruct" xoname="instruct" type="text" ng-model="med.info.instruct">
+        </ion-input>
+      </ion-list>
+    </div>
+  </ion-content>
   <div class="tabs tabs-positive">
     <a class="tab-item active" ui-sref="dashboard" ui-sref-opts="{reload: true}"><i class="icon ion-home"></i></a>
     <a class="tab-item" ng-click="saveMed()"><i class="icon ion-android-archive"></i></a>
-    <a id="refresh" class="tab-item"><i class="icon ion-refresh"></i></a>    
+    <a id="refresh" class="tab-item"><i class="icon ion-refresh"></i></a>
   </div>
 </ion-view>
