--- a/client/www/index.html
+++ b/client/www/index.html
@@ -7,11 +7,21 @@
   <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
   <title></title>
   <link href="lib/ionic/release/css/ionic.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/release/js/ionic.bundle.js"></script>
   <!-- material design -->
   <script src="lib/ionic-material/dist/ionic.material.min.css"></script>
   <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
+  <!-- chart.js -->
+  <script src="lib/Chart.js/Chart.js"></script>
+  <script src="lib/angular-chart.js/dist/angular-chart.js"></script>
+  <link rel="stylesheet" href="lib/angular-chart.js/dist/angular-chart.css">
+  <!-- d3 -->
+  <script src="lib/d3/d3.js"></script>
+  <script src="lib/nvd3/build/nv.d3.js"></script>
+  <script src="lib/angular-nvd3/dist/angular-nvd3.js"></script>
+  <link rel="stylesheet" href="lib/nvd3/build/nv.d3.css">
   <!-- my css -->
   <link href="css/style.css" rel="stylesheet">
   <!-- cordova script -->
@@ -23,6 +33,7 @@
   <script src="app/dashboard/dashboard.js"></script>
   <script src="app/medsForm/medsForm.js"></script>
   <script src="app/auth/auth.js"></script>
+  <script src="app/main/main.js"></script>
   <!-- services -->
   <script src="app/services.js"></script>
 </head>
