(feat) created files to begin healthStats view

--- a/client/www/app/main/main.html
+++ b/client/www/app/main/main.html
@@ -20,8 +20,8 @@
           <p> Calendar </p>
         </div>
         <div class="col col-50">
-          <img src="../img/alarm.png" ng-click="openReminders()">
-          <p> Reminders </p>
+          <img src="../img/alarm.png" ng-click="addReminder()">
+          <p> Reminder </p>
         </div>
       </div>
       <div class="row">
