--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -1,5 +1,9 @@
 <!-- Display input fields for entering medication information and schedule times. -->
 <ion-view name="medsForm" view-title="Medications Editor and Planner">
+  <div class="bar bar-header">
+    <a class="button icon-left ion-ios-arrow-left button-clear button-dark" ui-sref="main"></a>
+    <h1 class="title">Add Reminder</h1>
+  </div>
   <ion-content class="padding">
     <div class="list list-inset">
       <ion-list>
