--- a/client/www/index.html
+++ b/client/www/index.html
@@ -34,6 +34,7 @@
   <script src="app/medsForm/medsForm.js"></script>
   <script src="app/auth/auth.js"></script>
   <script src="app/main/main.js"></script>
+  <script src="app/healthStats/healthStats.js"></script>
   <!-- services -->
   <script src="app/services.js"></script>
 </head>
