--- a/client/www/app/main/main.html
+++ b/client/www/app/main/main.html
@@ -16,21 +16,21 @@
       <!-- Menu -->
       <div class="row">
         <div class="col col-50">
-          <img src="../img/calendar.png" ng-click="openCalendar()">
+          <img src="../img/calendar.png" ui-sref="calendar">
           <p> Calendar </p>
         </div>
         <div class="col col-50">
-          <img src="../img/alarm.png" ng-click="addReminder()">
+          <img src="../img/alarm.png" ui-sref="medsForm">
           <p> Reminder </p>
         </div>
       </div>
       <div class="row">
         <div class="col col-50">
-          <img src="../img/stats.png" ng-click="openStats()">
+          <img src="../img/stats.png" ui-sref="healthStats">
           <p> Health Stats </p>
         </div>
         <div class="col col-50">
-          <img src="../img/medication.png" ng-click="openMedications()">
+          <img src="../img/medication.png" ui-sref="dashboard">
           <p> Medications </p>
         </div>
       </div>
