--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -24,7 +24,7 @@
   </div>
   </ion-content>  
   <div class="tabs tabs-positive">
-    <a class="tab-item active" ui-sref="dashboard"><i class="icon ion-home"></i></a>
+    <a class="tab-item active" ui-sref="dashboard" ui-sref-opts="{reload: true}"><i class="icon ion-home"></i></a>
     <a class="tab-item" ng-click="saveMed()"><i class="icon ion-android-archive"></i></a>
     <a id="refresh" class="tab-item"><i class="icon ion-refresh"></i></a>    
   </div>
