(feat) clock working on main page

--- a/client/www/app/healthStats/healthStats.html
+++ b/client/www/app/healthStats/healthStats.html
@@ -8,16 +8,24 @@
   <ion-content class="main-menu">
     <div class="card">
       <div class="item item-text-wrap">
-        <p> Adderall </p>
+        <p> Adderall Side Effects </p>
         <br>
-        <canvas id="radar" class="chart chart-radar" chart-data="data" chart-labels="labels"></canvas>
+        <canvas id="Adderall" class="chart chart-radar" chart-data="adderall" chart-labels="adderallLabels"></canvas>
       </div>
     </div>
     <div class="card">
       <div class="item item-text-wrap">
-        <p> Synthroid </p>
+        <p> Synthroid Side Effects </p>
         <br>
-        <canvas id="radar" class="chart chart-radar" chart-data="data" chart-labels="labels"></canvas>
+        <canvas id="Synthroid" class="chart chart-radar" chart-data="synthroid" chart-labels="synthroidLabels"></canvas>
+      </div>
+    </div>
+    <div class="card">
+      <div class="item item-text-wrap">
+        <p> Compliance </p>
+        <br>
+        <canvas id="compliance" class="chart chart-doughnut" chart-data="compliance" chart-labels="complianceLabels">
+        </canvas>
       </div>
     </div>
   </ion-content>
