--- a/client/www/app/main/main.html
+++ b/client/www/app/main/main.html
@@ -10,27 +10,27 @@
       <!-- This is pending. We can add another functionality here -->
       <div class="row">
         <div class="col col-100">
-          <h2 class="time"> 9:00 am </h2>
+          <ds-widget-clock show-digital theme="blue-light" digital-format="'hh:mm a'"></ds-widget-clock>
         </div>
       </div>
       <!-- Menu -->
       <div class="row">
         <div class="col col-50">
-          <img src="../img/calendar.png" ui-sref="calendar">
+          <img src="http://i64.tinypic.com/2qv4k9d.png" ui-sref="calendar">
           <p> Calendar </p>
         </div>
         <div class="col col-50">
-          <img src="../img/alarm.png" ui-sref="medsForm">
+          <img src="http://i63.tinypic.com/2cpvqxh.png" ui-sref="medsForm">
           <p> Reminder </p>
         </div>
       </div>
       <div class="row">
         <div class="col col-50">
-          <img src="../img/stats.png" ui-sref="healthStats">
+          <img src="http://i63.tinypic.com/35i4tgk.png" ui-sref="healthStats">
           <p> Health Stats </p>
         </div>
         <div class="col col-50">
-          <img src="../img/medication.png" ui-sref="dashboard">
+          <img src="http://i68.tinypic.com/2hxqfkk.png" ui-sref="dashboard">
           <p> Medications </p>
         </div>
       </div>
