--- a/client/www/index.html
+++ b/client/www/index.html
@@ -22,6 +22,10 @@
   <script src="lib/nvd3/build/nv.d3.js"></script>
   <script src="lib/angular-nvd3/dist/angular-nvd3.js"></script>
   <link rel="stylesheet" href="lib/nvd3/build/nv.d3.css">
+  <!-- current time -->
+  <script src="lib/angular-ui-clock/dist/angular-clock.js"></script>
+  <link rel="stylesheet" href="lib/angular-ui-clock/dist/angular-clock.css">
+  <link href="//fonts.googleapis.com/css?family=Syncopate:400,700" rel="stylesheet" type="text/css">
   <!-- my css -->
   <link href="css/style.css" rel="stylesheet">
   <!-- cordova script -->
