--- a/client/www/app/healthStats/healthStats.html
+++ b/client/www/app/healthStats/healthStats.html
@@ -1,7 +1,7 @@
 <ion-view view-title="healthStats" name="healthStats-view">
   <div class="row">
     <div class="bar bar-header">
-      <a class="button icon-left ion-ios-arrow-left button-clear button-dark" ui-sref="main"></a>
+      <a class="button icon-left ion-ios-arrow-left button-clear button-dark" ui-sref="dashboard"></a>
       <h1 class="title">Health Stats</h1>
     </div>
   </div class="row">
