--- a/client/www/app/medsForm/medsForm.html
+++ b/client/www/app/medsForm/medsForm.html
@@ -1,7 +1,7 @@
 <!-- Display input fields for entering medication information and schedule times. -->
 <ion-view name="medsForm" view-title="Medications Editor and Planner">
   <div class="bar bar-header">
-    <a class="button icon-left ion-ios-arrow-left button-clear button-dark" ui-sref="main"></a>
+    <a class="button icon-left ion-ios-arrow-left button-clear button-dark" ui-sref="dashboard"></a>
     <h1 class="title">Add Reminder</h1>
   </div>
   <ion-content class="padding">
@@ -31,9 +31,4 @@
       </ion-list>
     </div>
   </ion-content>
-  <div class="tabs tabs-positive">
-    <a class="tab-item active" ui-sref="dashboard" ui-sref-opts="{reload: true}"><i class="icon ion-home"></i></a>
-    <a class="tab-item" ng-click="saveMed()"><i class="icon ion-android-archive"></i></a>
-    <a id="refresh" class="tab-item"><i class="icon ion-refresh"></i></a>
-  </div>
 </ion-view>
