--- a/client/www/index.html
+++ b/client/www/index.html
@@ -37,13 +37,13 @@
   <script src="app/dashboard/dashboard.js"></script>
   <script src="app/medsForm/medsForm.js"></script>
   <script src="app/auth/auth.js"></script>
-  <script src="app/main/main.js"></script>
+  <script src="app/medications/medications.js"></script>
   <script src="app/healthStats/healthStats.js"></script>
   <!-- services -->
   <script src="app/services.js"></script>
 </head>
 
-<body ng-app="starter">
+<body ng-app="medup">
   <ion-nav-view> Nav </ion-nav-view>
 </body>
 
